# mcp-radarr-sonarr

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  claude_desktop_config_example.json  config.json.example  pyproject.toml  run.py  run_tests.py  setup.py
.github/workflows/: publish.yml  release.yml  test.yml
radarr_sonarr_mcp/: __init__.py  cli.py  config.py  handlers_extended.py  response_formatter.py  server.py  tools_extended.py
radarr_sonarr_mcp/services/: __init__.py  jellyfin_service.py  plex_service.py  radarr_service.py  sonarr_service.py
tests/: __init__.py  test_server.py
