[project]
name = "radarr-sonarr-mcp"
version = "0.1.0"
description = "MCP Server for Radarr and Sonarr media management"
authors = [
  { name = "Berry", email = "berry@berry.com" }
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
scripts = { radarr-sonarr-mcp = "radarr_sonarr_mcp.cli:main" }
dependencies = [
  "mcp>=0.1.0",
  "requests>=2.28.0",
  "pydantic>=2.0.0"
]
optional-dependencies = { dev = ["pytest>=7.0.0"] }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"